Fix logo stretch problem in header

--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
     border-top: none;
     border-left: none;
     border-right: none;
-    flex-shrink: none;
+}
+
+img.logo {
+    align-self: center;
 }
 
 
@@ -20,7 +23,7 @@ ul {
     list-style: none;
     justify-content: center;
     align-items: center;
-    font-size: 2.2vw;
+    font-size: 1.1;
 }
 
 a {
@@ -32,7 +35,7 @@ a {
 
 a:hover {
     color: black;
-    text-shadow: 2px 2px 4px #536140;
+    text-shadow: 2px 1px 3px #0D3538;
 }
 
 .strip-1 {
